Etape 5 : Test ci/cd jenkins